5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4015/executions/1573_1326.log
== SUBMITION (2019-03-11 15:01:23) 
-- CODE:
printf("40+45")
-- EXECUTION TIME:
0.133319
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1326/main.py", line 1, in <module>
    printf("40+45")
NameError: name 'printf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:02:55) 
-- CODE:
printf("40+35=75");
-- EXECUTION TIME:
0.220007
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1326/main.py", line 1, in <module>
    printf("40+35=75");
NameError: name 'printf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:04:51) 
-- CODE:
print(40+35)

-- EXECUTION TIME:
0.203982
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:04:54) 
-- CODE:
print(40+35)

-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
